--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ balanced_3/
 balanced_4/
 balanced_5/
 balanced_6/
+balanced_data/
 .DS_Store
 .ipynb_checkpoints/
 .virtual_documents/
 flow_300_100/
 __pycache__/
+toy_dataset/ 
